2008-03-19  Brian Pepple  <bpepple@fedoraproject.org>

	* po/POTFILES.in:
	* src/nsc-error.[ch]:
	* src/nsc-gstreamer.[ch]:
	* src/Makefile.am: Add initial gstreamer framework code.
	
2008-03-19  Brian Pepple  <bpepple@fedoraproject.org>

	* AUTHORS:
	* autogen.sh:
	* configure.ac:
	* Makefile.am:
	* NEWS:
	* README:
	* TODO:
	* data/main.glade:
	* data/main.xml:
	* data/Makefile.am:
	* po/ChangeLog:
	* po/LINGUAS:
	* po/POTFILES.in:
	* src/Makefile.am: 
	* src/nsc-converter.[ch]:
	* src/nsc-extension.[ch]:
	* src/nsc-module.c: Initial project files.
